# smart-tsp-benchmark

./: README.md  main.py  pyproject.toml  requirements.txt
smart_tsp_benchmark/: tsp_benchmark.py
smart_tsp_benchmark/calculators/: length.py
smart_tsp_benchmark/generators/: dots.py  points.py
smart_tsp_benchmark/optimizers/: fast_opt.py  two_opt.py
smart_tsp_benchmark/visialization/: plot_routes.py
smart_tsp_benchmark/visualization/: plot_routes.py
