[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-tsp-benchmark"
version = "0.1.3"
description = "Smart TSP Benchmark is a professional algorithm testing infrastructure with customizable scenarios and detailed metrics."
authors = [
    {name = "A.A Suvorov", email = "smartlegiondev@gmail.com"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.5",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "packaging==25.0",
    "pillow==11.3.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "scipy==1.16.0",
    "six==1.17.0",
]

[project.urls]
Homepage = "https://github.com/smartlegionlab/smart-tsp-benchmark"

[tool.setuptools.packages.find]
where = ["."]